--- a/package.json
+++ b/package.json
@@ -16,21 +16,18 @@
     "maath": "^0.5.3",
     "mapbox-gl": "^2.13.0",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.10.0",
-    "react-simple-maps": "^3.0.0",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^9.1.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.151.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.10",
     "@types/react": "^18.0.28",
-    "@types/react-alert": "^7.0.2",
     "@types/react-dom": "^18.0.11",
-    "@types/react-simple-maps": "^3.0.0",
     "@types/react-vertical-timeline-component": "^3.3.3",
     "@types/three": "^0.150.0",
     "@vitejs/plugin-react": "^3.1.0",
